--- a/project-build-1/style.css
+++ b/project-build-1/style.css
@@ -929,6 +929,20 @@ section {
     animation-delay: 0.6s;
 }
 
+footer p {
+    width: 100vw;
+    font-size: 2rem;
+    text-align: center;
+    background: black;
+    color: white;
+}
+
+footer p a {
+    text-decoration: none;
+    color: white;
+    font-weight: 900;
+}
+
 @media (min-width: 450px) {
     .contact__main .img-container img {
         height: 80vh;
